<resources>
    <string name="app_name">DiceRoller</string>
    <string name="app_title" translatable="false">Dice Roller</string>
    <string name="author">Author: André Lamego</string>
    <string name="author_ra" translatable="false">RA: 1110482412023</string>

    <string name="qtd_dados">Dice Rolled:</string>
    <string name="qtd1">1 Dice</string>
    <string name="qtd2">2 Dices</string>
    <string name="qtd3">3 Dices</string>
    <string name="tipo_dado">Dice Type:</string>
    <string name="roll">Roll</string>
    <string name="results">Results:</string>
</resources>